[package]
name = "torustiq-common"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"

[features]
pipeline_module_all = ["pipeline_module_essentials", "export_fn__step_shutdown", "pipeline_module_async_process"]
pipeline_module_essentials = ["export_fn__free_record", "export_fn__step_set_param"]
export_fn__free_record = []
export_fn__step_set_param = []
export_fn__step_shutdown = []
pipeline_module_async_process = []