[package]
name = "torustiq-common"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"

[features]
module_essentials_common = ["export_fn__free_char_ptr", "export_fn__step_set_param"]
module_listener_all = ["module_listener_essentials", "export_fn__step_shutdown"]
module_listener_essentials = ["module_essentials_common", "export_fn__lib_listener_init"]
module_pipeline_all = ["module_pipeline_essentials", "export_fn__step_shutdown", "pipeline_module_async_process", "export_fn__lib_pipeline_init"]
module_pipeline_essentials = ["module_essentials_common", "export_fn__free_record", "export_fn__free_record_ptr", "export_fn__new_record_ptr"]
export_type__cchar = []
export_fn__lib_listener_init = []
export_fn__lib_pipeline_init = []
export_fn__free_char_ptr = []
export_fn__free_record = ["export_type__cchar"]
export_fn__free_record_ptr = []
export_fn__new_record_ptr = []
export_fn__step_set_param = ["export_type__cchar"]
export_fn__step_shutdown = []
pipeline_module_async_process = []